--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
     "mongoose": "^7.5.3",
     "morgan": "^1.10.0",
     "path": "^0.12.7"
+    
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": "18.16.0"
   }
 }
