--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.1",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
